# dpscreenocr

./: .gitignore  .mailmap  CMakeLists.txt  LICENSE.txt  README.md  gen_remote_langs_github.py  index.html  lang-menu.js  languages.css  languages.html  languages_table_gen.py  manual.html  style.css  website-tool.py
src/dpso/: CMakeLists.txt  array_utils.h  delay.cpp  delay.h  dpso.cpp  dpso.h  error.cpp  error.h  geometry.cpp  geometry.h  geometry_c.cpp  geometry_c.h  hotkeys.cpp  hotkeys.h  img.cpp  img.h  key_manager.cpp  key_manager.h  key_names.cpp  key_names.h  key_types.h  keys.cpp  keys.h  ocr.cpp  ocr.h  ocr_data_lock.cpp  ocr_data_lock.h  ocr_engine.cpp  ocr_engine.h  ocr_lang_manager.cpp  ocr_lang_manager.h  ocr_private.h  ocr_registry.cpp  ocr_registry.h  progress_tracker.cpp  progress_tracker.h  selection.cpp  selection.h  str.cpp  str.h  (+4 more)
src/dpso/backend/: backend.cpp  backend.h  backend_error.h  key_manager.h  screenshot.h  screenshot_error.h  selection.h
src/dpso/ocr/: engine.cpp  engine.h  error.h  lang_code_validator.cpp  lang_code_validator.h  lang_manager.h  lang_manager_error.h  recognizer.h  recognizer_error.h  remote_files_lang_manager.cpp  remote_files_lang_manager.h
src/dpso/ocr_engine/: ocr_engine.cpp  ocr_engine.h  ocr_engine_creator.cpp  ocr_engine_creator.h  ocr_result.cpp  ocr_result.h  ocr_result_text.cpp  ocr_result_text.h  tesseract_ocr_engine.cpp  tesseract_ocr_engine.h
src/dpso_example/: CMakeLists.txt  delay.c  delay.h  delay_std.cpp  main.c
src/dpso_ext/: CMakeLists.txt  cfg.cpp  cfg.h  cfg_ext.cpp  cfg_ext.h  dpso_ext.h  exec.h  exec_unix.cpp  exec_windows.cpp  history.cpp  history.h  history_export.cpp  history_export.h  str_nformat.cpp  str_nformat.h  user_dirs.h  user_dirs_unix_xdg.cpp  user_dirs_windows.cpp  windows_utils.cpp
src/dpso_img/: CMakeLists.txt  dpso_img.h  img.cpp  img.h  ops.cpp  ops.h  ops_utils.h  pnm.cpp  pnm.h  px_format.cpp  px_format.h
src/dpso_intl/: CMakeLists.txt  bindtextdomain_utf8.cpp  bindtextdomain_utf8.h  dpso_bindtextdomain_utf8.cpp  dpso_intl.cpp  dpso_intl.h  helpers.cpp  helpers.h  libintl_include.h  libintl_noop.cpp  libintl_noop.h
src/dpso_json/: CMakeLists.txt  json.cpp  json.h
src/dpso_net/: CMakeLists.txt  download_file.cpp  download_file.h  error.h  get_data.cpp  get_data.h  request.h  request_curl.cpp  request_curl_lib.cpp  request_curl_lib.h  request_curl_lib_utils.h  request_windows.cpp
src/dpso_ocr/: CMakeLists.txt  data_lock.cpp  data_lock.h  dpso_ocr.h  engine.cpp  engine.h  lang_manager.cpp  ocr.cpp  ocr.h
src/dpso_ocr/engine/: engine.cpp  engine.h  lang_code_validator.cpp  lang_code_validator.h  lang_manager.h  lang_manager_error.h  recognizer.h  recognizer_error.h  remote_files_lang_manager.cpp  remote_files_lang_manager.h
src/dpso_sound/: CMakeLists.txt  error.h  format_info.h  sound.h  sound_null.cpp  sound_windows.cpp
src/dpso_sound/unix/: audio_data.h  lib_pulse.cpp  lib_pulse.h  lib_sndfile.cpp  lib_sndfile.h  sndfile.cpp  sndfile.h  sound.cpp  sound_pulse.cpp
src/dpso_sys/: CMakeLists.txt  dpso_sys.cpp  dpso_sys.h  dpso_sys_fwd.h  dpso_sys_p.h  key_manager.cpp  key_manager.h  keys.cpp  keys.h  screenshot.cpp  screenshot.h  selection.cpp  selection.h
src/dpso_sys/backend/: backend.h  key_manager.h
src/dpso_utils/: CMakeLists.txt  byte_order.h  cfg.cpp  cfg.h  cfg_ext.cpp  cfg_ext.h  cfg_path.cpp  cfg_path.h  cfg_path_unix_xdg.cpp  cfg_path_windows.cpp  cfg_private.h  delay.cpp  dpso_utils.h  error.cpp  error.h  error_get.h  error_set.h  exec.cpp  exec.h  exec_null.cpp  exec_posix.cpp  exec_windows.cpp  file.cpp  file.h  geometry.cpp  geometry.h  geometry_c.cpp  geometry_c.h  history.cpp  history.h  history_export.cpp  history_export.h  history_private.h  intl.cpp  intl.h  lang_name.cpp  lang_name.h  line_reader.cpp  line_reader.h  os.cpp  (+39 more)
src/dpso_utils/stream/: file_stream.cpp  file_stream.h  out_newline_conversion_stream.cpp  out_newline_conversion_stream.h  stream.h  string_stream.cpp  string_stream.h  utils.cpp  utils.h
src/dpso_utils/unix/: dl.h  exe_path.cpp  exe_path.h  fsync.cpp  fsync.h  make_dirs.cpp  make_dirs.h  path_env_search.cpp  path_env_search.h  xdg_dirs.cpp  xdg_dirs.h
src/dpso_utils/windows/: cmdline.cpp  cmdline.h  com.h  error.cpp  error.h  exe_path.cpp  exe_path.h  gdi.h  handle.h  module.h  package.cpp  package.h  utf.cpp  utf.h  window.h
src/ui/common/: CMakeLists.txt  app_info.cpp.in  app_info.h  cfg_default_values.cpp  cfg_default_values.h  cfg_key_values.txt  cfg_key_values_gen.py  cfg_keys.cpp  cfg_keys.h  cfg_keys.txt  cfg_keys_gen.py  common.h  file_names.cpp  file_names.cpp.in  file_names.h  paths.cpp.in  paths.h
src/ui/fltk/: CMakeLists.txt  hotkey_button.cpp  hotkey_button.h  lang_browser.cpp  lang_browser.h  language_choice.cpp  language_choice.h  main.cpp
tests/: CMakeLists.txt  flow.cpp  flow.h  main.cpp  test_c_compilation.c  test_cfg.cpp  test_cfg.h  test_geometry.cpp  test_geometry.h  test_history.cpp  test_history.h  test_hotkeys.cpp  test_hotkeys.h  test_os.cpp  test_progress_tracker.cpp  test_str.cpp  test_str.h  test_str_format.cpp  test_str_format.h  test_tesseract_utils.cpp  test_windows_utils.cpp  test_windows_utils.h  utils.cpp  utils.h
tests/dpso/: test_geometry.cpp  test_hotkeys.cpp  test_keys.cpp  test_progress_tracker.cpp  test_str.cpp  test_strftime.cpp  test_tesseract_utils.cpp  test_windows_action_executor.cpp  test_windows_utils_utf.cpp
tests/dpso_ext/: test_cfg.cpp  test_history.cpp  test_history_export.cpp  test_str_nformat.cpp  test_windows_utils.cpp
tests/dpso_ocr/: test_tesseract_utils.cpp
tests/dpso_sys/: test_keys.cpp  test_windows_action_executor.cpp
tests/dpso_utils/: test_byte_order.cpp  test_cfg.cpp  test_geometry.cpp  test_history.cpp  test_history_export.cpp  test_line_reader.cpp  test_os.cpp  test_os_stdio.cpp  test_progress_tracker.cpp  test_sha256.cpp  test_sha256_file.cpp  test_str.cpp  test_strftime.cpp  test_version_cmp.cpp  test_windows_cmdline.cpp  test_windows_utf.cpp  test_windows_utils.cpp
tools/app_launcher_unix/: CMakeLists.txt  main.c  readme.txt
(+434 files in other folders)
